[package]
name = "fusio-log"
version = "0.1.0"
edition = "2021"

[features]
aws = ["fusio-dispatch/aws", "fusio/aws"]
bytes = ["dep:bytes"]
default = ["aws", "bytes", "tokio", "tokio-http"]
tokio = [
    "fusio-dispatch/tokio",
    "fusio/tokio",
]
tokio-http = ["fusio/tokio-http"]
web = ["fusio-dispatch/opfs", "fusio/opfs"]
web-http = ["fusio/wasm-http"]

[dependencies]
async-stream = "0.3"
bytes = { version = "1.7", optional = true }
crc32fast = "1"
fusio = { git = "https://github.com/tonbo-io/fusio", rev = "c0db1654de692dfdf2f17efd5a0492b99cb026fc", version = "0.3.4", package = "fusio", features = [
    "dyn",
    "fs",
    "bytes"
] }
fusio-dispatch = { git = "https://github.com/tonbo-io/fusio", rev = "c0db1654de692dfdf2f17efd5a0492b99cb026fc", version = "0.3.4", package = "fusio-dispatch" }
futures-core = "0.3"
futures-util = "0.3"

thiserror = "2.0.3"

[dev-dependencies]
tempfile = "3"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1", features = ["full"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen = "0.2.99"
wasm-bindgen-test = "0.3.49"
